:sparkles: add login functionality

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   thymeleaf:
     cache: false
+check-template: true
+check-template-location: true
+enabled: true
+prefix: classpath:/templates/
+suffix: .html
